[package]
name = "user_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
    "debug-print",
] }
anyhow = "1.0.81"
mysql = "25.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
log = "0.4.21"
log4rs = "1.3.0"
sqlx = "0.7.4"
rust-string-random = "0.1.0"
actix-web = "4.9.0"


